# isis

./: defaults.yml
basic/4-metric/: .clab.yml.bak  netlab.snapshot.yml  pyproject.toml
basic/6-level-2/: .clab.yml.bak  netlab.snapshot.yml  pyproject.toml
basic/6-level-2/clab-level2/: ansible-inventory.yml  topology-data.json
basic/6-level-2/clab-level2/.tls/ca/: ca.key  ca.pem
basic/6-level-2/clab-level2/r1/flash/: startup-config  system_mac_address
basic/6-level-2/clab-level2/r1/flash/debug/: reload_history
basic/6-level-2/clab-level2/r1/flash/persist/: local  secure  sys
basic/6-level-2/clab-level2/r2/flash/: startup-config  system_mac_address
basic/6-level-2/clab-level2/r2/flash/debug/proc/: modules
basic/6-level-2/clab-level2/r2/flash/persist/: local  secure  sys
basic/6-level-2/clab-level2/r3/flash/: startup-config  system_mac_address
basic/6-level-2/clab-level2/r3/flash/debug/: reload_history
basic/6-level-2/clab-level2/r3/flash/persist/: local  secure  sys
