[tool.poetry]
name = "6-level-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ansible = "^10.5.0"
ansible-pylibssh = "^1.2.2"
netmiko = "^4.4.0"
paramiko = "^3.5.0"
networklab = "^1.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
